test/domains/diten/castAwayStridableDomain.4.good
error: IllegalArgumentError: bad cast from stride -1 to strideKind.one
castAwayStridableDomain.chpl:15: error: halt reached - bad cast from stride -1 to strideKind.one
